# v2rayNG

./: .gitignore  .gitmodules
.github/workflows/: build.yml  test.yml
V2rayNG/: settings.gradle.kts
V2rayNG/app/: build.gradle.kts  proguard-rules.pro
V2rayNG/app/src/main/: AndroidManifest.xml
V2rayNG/app/src/main/cpp/: CMakeLists.txt  root_tun_common.h  root_tun_helper.cpp  root_tun_jni.cpp
V2rayNG/app/src/main/res/color/: home_bottom_nav_color.xml
V2rayNG/app/src/main/res/drawable/: bg_home_metric_divider.xml  bg_home_metric_inline.xml  bg_home_mode_pill.xml  bg_home_node_item.xml  bg_home_node_item_selected.xml  bg_home_status_card_running.xml  bg_home_status_dot.xml  bg_privilege_pill_fail.xml  bg_privilege_pill_ok.xml  bg_privilege_pill_warn.xml  bg_privilege_section.xml  bg_privilege_status_fail.xml  bg_privilege_status_partial.xml  bg_privilege_status_pass.xml  ic_chevron_right_24dp.xml
V2rayNG/app/src/main/res/layout/: activity_bypass_list.xml  activity_main.xml  activity_settings.xml  activity_sub_edit.xml  activity_sub_setting.xml  dialog_privilege_self_test.xml  fragment_group_server.xml  fragment_home.xml  fragment_more.xml  fragment_routing_setting.xml  fragment_sub_setting.xml  fragment_subscription_manage.xml  item_recycler_main.xml  item_recycler_routing_setting.xml  item_recycler_sub_setting.xml
V2rayNG/app/src/main/res/menu/: menu_bottom_nav.xml  menu_main.xml
V2rayNG/app/src/main/res/values-night/: colors.xml
V2rayNG/app/src/main/res/values-zh-rCN/: strings.xml
docs/apple-design-review/: index.html  repro-after-fix.html
(+134 files in other folders)
